--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -40,14 +40,14 @@
     </LinearLayout>
     <!-- 커스텀뷰(원형 프로그레스바)-->
 
-    <com.konkuk.walku.src.main.analysis.today.CircleBarView
-        android:id="@+id/customCircleBarView"
-        android:layout_width="279dp"
-        android:layout_height="309dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
+        android:layout_height="400dp"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_gravity="center"/>
+        />
+
 </LinearLayout>
